feat: field ALL 일때 API 추가